--- a/src/pages/ideas/index.astro
+++ b/src/pages/ideas/index.astro
@@ -41,7 +41,7 @@ const allPostsData = posts.map((post) => {
 });
 ---
 
-<BaseLayout>
+<BaseLayout title="Ideas">
   <style>
     .hero {
       padding: 2rem 0;
