--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,7 +77,8 @@ const allPostsData = posts.map((post) => {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 30vh;
+    height: 40vh;
+    min-height: 200px;
     text-align: center;
   }
 
