--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -36,5 +36,15 @@ const {
       margin: 0 auto;
     }
   </style>
+  <noscript>
+    <style>
+      .js-required {
+        display: none !important;
+      }
+      .js-missing {
+        display: block !important;
+      }
+    </style>
+  </noscript>
   <Analytics />
 </html>
