--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -220,9 +220,13 @@ a:hover {
 p {
   margin-bottom: 1em;
 }
-ul {
-
+ol,ul {
   margin-block-start: 0;
+}
+ol p,
+ul p {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 details {
   margin-bottom: 1em;
@@ -285,6 +289,10 @@ hr {
   main {
     padding: 1em;
   }
+}
+
+.js-missing {
+  display: none !important;
 }
 
 .sr-only {
