--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -359,3 +359,159 @@ hr {
   opacity: 1;
   visibility: visible;
 }
+
+
+[data-callout='note'],
+[data-callout='info'],
+[data-callout='todo'] {
+  /* --rc-color-light: var(--callout-note-color-light, rgb(8, 109, 221)); */
+  /* --rc-color-dark: var(--callout-note-color-dark, rgb(2, 122, 255)); */
+  --rc-color-light: var(--callout-note-color-dark, var(--blue));
+  --rc-color-dark: var(--callout-note-color-dark, var(--blue));
+}
+
+[data-callout='abstract'],
+[data-callout='summary'],
+[data-callout='tldr'],
+[data-callout='tip'],
+[data-callout='hint'],
+[data-callout='important'] {
+  /* --rc-color-light: var(--callout-abstract-color-light, rgb(0, 191, 188));
+  --rc-color-dark: var(--callout-abstract-color-dark, rgb(83, 223, 221)); */
+  --rc-color-light: var(--callout-abstract-color-light, var(--cyan));
+  --rc-color-dark: var(--callout-abstract-color-dark, var(--cyan));
+}
+
+
+[data-callout='success'],
+[data-callout='check'],
+[data-callout='done'] {
+  /* --rc-color-light: var(--callout-success-color-light, rgb(8, 185, 78));
+  --rc-color-dark: var(--callout-success-color-dark, rgb(68, 207, 110)); */
+  --rc-color-light: var(--callout-success-color-light, var(--green));
+  --rc-color-dark: var(--callout-success-color-dark, var(--green));
+}
+
+[data-callout='question'],
+[data-callout='help'],
+[data-callout='faq'],
+[data-callout='warning'],
+[data-callout='attention'],
+[data-callout='caution'] {
+  /* --rc-color-light: var(--callout-question-color-light, rgb(236, 117, 0));
+  --rc-color-dark: var(--callout-question-color-dark, rgb(233, 151, 63)); */
+  --rc-color-light: var(--callout-question-color-light, var(--orange));
+  --rc-color-dark: var(--callout-question-color-dark, var(--orange));
+}
+
+
+[data-callout='caution'],
+[data-callout='failure'],
+[data-callout='missing'],
+[data-callout='fail'],
+[data-callout='danger'],
+[data-callout='error'],
+[data-callout='bug'] {
+  /* --rc-color-light: var(--callout-missing-color-light, rgb(233, 49, 71));
+    --rc-color-dark: var(--callout-missing-color-dark, rgb(251, 70, 76)); */
+  --rc-color-light: var(--callout-caution-color-light, var(--red));
+  --rc-color-dark: var(--callout-caution-color-dark, var(--red));
+}
+
+[data-callout='example'] {
+  /* --rc-color-light: var(--callout-example-color-light, rgb(120, 82, 238));
+  --rc-color-dark: var(--callout-example-color-dark, rgb(168, 130, 255)); */
+  --rc-color-light: var(--callout-example-color-light, var(--violet));
+  --rc-color-dark: var(--callout-example-color-dark, var(--violet));
+}
+
+[data-callout='quote'],
+[data-callout='cite'] {
+  --rc-color-light: var(--callout-quote-color-light, rgb(158, 158, 158));
+  --rc-color-dark: var(--callout-quote-color-dark, rgb(158, 158, 158));
+}
+
+.callout {
+  --rc-color-default: #888;
+
+  overflow: hidden;
+
+  /* width: 100%; */
+  padding: 12px 12px 12px 24px;
+  border-radius: 4px;
+  margin: 1em 0;
+
+  line-height: 1.3;
+
+  mix-blend-mode: darken;
+  background-color: rgb(from var(--rc-color-light, var(--rc-color-default)) r g b / 0.1);
+}
+
+[data-effective-theme="dark"] .callout {
+  mix-blend-mode: lighten;
+  background-color: rgb(from var(--rc-color-dark, var(--rc-color-default)) r g b / 0.1);
+}
+
+.callout-title {
+  display: flex;
+  align-items: flex-start;
+  gap: 4px;
+
+  color: var(--rc-color-light, var(--rc-color-default));
+  font-size: inherit;
+}
+
+[data-effective-theme="dark"] .callout-title {
+  color: var(--rc-color-dark, var(--rc-color-default));
+}
+
+.callout-title::-webkit-details-marker {
+  display: none;
+}
+
+.callout-title-icon {
+  display: flex;
+  flex: 0 0 auto;
+  align-items: center;
+}
+
+.callout-title-text {
+  color: inherit;
+  font-weight: 600;
+}
+
+.callout-content {
+  overflow-x: auto;
+  padding: 0;
+  background-color: transparent;
+}
+
+.callout[data-collapsible='true'] .callout-title {
+  cursor: pointer;
+}
+
+.callout[data-collapsible='true'] .callout-fold-icon {
+  display: flex;
+  align-items: center;
+  padding-inline-end: 8px;
+}
+
+.callout[data-collapsible='true'] > .callout-title .callout-fold-icon svg {
+  transform: rotate(-90deg);
+  transition: transform 100ms ease-in-out;
+}
+
+.callout[data-collapsible='true'][open] > .callout-title .callout-fold-icon svg {
+  transform: none;
+}
+
+.callout-title-icon::after,
+.callout-fold-icon::after {
+  content: '\200B';
+}
+
+.callout-title-icon svg,
+.callout-fold-icon svg {
+  width: 18px;
+  height: 18px;
+}
