--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,6 +4,9 @@ import { Image } from "astro:assets";
 ---
 
 <BaseLayout title="About">
+  <div class="headshot slide-in-block">
+    <Image src="/img/headshot.jpeg" alt="Me" width={300} height={300} />
+  </div>
   <section class="about-me slide-in-block">
     <div>
       <h2>About me</h2>
@@ -12,17 +15,18 @@ import { Image } from "astro:assets";
       <ul>
         <li>
           <div>
-            <span>2024 - current</span> - 
+            <span>current</span> -
             <span class="title">MS, Computer Science, Georgia Tech</span>
           </div>
           <div>
             I'm currently a master's student at Georgia Tech, studying computer
-            science. I'm interested in AI, Machine Learning, and High-Performance Computing.
+            science. I'm interested in AI, Machine Learning, and
+            High-Performance Computing.
           </div>
         </li>
         <li>
           <div>
-            <span>2019 - 2024</span> - 
+            <span>5 years</span> -
             <span class="title">Senior Software Engineer, Knowable</span>
           </div>
           <div>
@@ -32,7 +36,7 @@ import { Image } from "astro:assets";
         </li>
         <li>
           <div>
-            <span>2017 - 2019</span> - 
+            <span>2 years</span> -
             <span class="title">Senior Software Engineer, Rosetta Stone</span>
           </div>
           <div>
@@ -42,9 +46,7 @@ import { Image } from "astro:assets";
         </li>
         <li>
           <div>
-            <span>2012 - 2016</span> - 
-            <span
-              class="title"
+            <span class="title"
               >BS, Biomedical Engineering, Virginia Commonwealth University</span
             >
           </div>
@@ -54,9 +56,6 @@ import { Image } from "astro:assets";
           </div>
         </li>
       </ul>
-    </div>
-    <div class="headshot">
-      <Image src="/img/headshot.jpeg" alt="Me" width={300} height={300} />
     </div>
   </section>
   <section class="about-this-site slide-in-block">
@@ -120,6 +119,14 @@ import { Image } from "astro:assets";
       max-width: 800px;
       margin: 0 auto;
     }
+
+    .headshot {
+      margin: 0 auto;
+      max-width: 300px;
+    }
+    .headshot img {
+      border: 10px solid #fff;
+    }
     .about-me {
       display: flex;
       flex-direction: row;
@@ -149,8 +156,7 @@ import { Image } from "astro:assets";
       filter: blur(10px);
       transform: scale(0.95);
       will-change: transform, opacity, filter;
-      animation: slideInBlock 0.4s cubic-bezier(0.43, 0.195, 0.02, 1)
-        forwards;
+      animation: slideInBlock 0.4s cubic-bezier(0.43, 0.195, 0.02, 1) forwards;
     }
 
     .slide-in-block:nth-child(1) {
@@ -165,14 +171,6 @@ import { Image } from "astro:assets";
         filter: blur(0px);
         transform: scale(1);
       }
-    }
-
-    .headshot {
-      padding-top: 2rem;
-      padding-left: 2rem;
-    }
-    .headshot img {
-      border: 10px solid #fff;
     }
   </style>
 </BaseLayout>
