Call it good enough

--- a/src/components/BookCard.astro
+++ b/src/components/BookCard.astro
@@ -57,6 +57,10 @@ import { Image } from "astro:assets";
     display: block;
   }
 
+  .book-card-link:hover {
+    text-decoration: underline;
+  }
+
   .book-card {
     display: flex;
     align-items: flex-start;
