Update hero imeages for fear of CC infringement

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -115,9 +115,21 @@ const imageData = getImageData();
     .hero-image {
       width: 100%;
     }
-    .hero-image img {
+    .hero-image figure {
       display: block;
       margin: 0 auto;
+    }
+
+    .caption {
+      margin-top: 0.75rem;
+      font-size: 0.9rem;
+      font-style: italic;
+      color: var(--sol-1);
+      line-height: 1.4;
+      max-width: min(90%, 800px);
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
     }
 
     .prose {
@@ -190,8 +202,7 @@ const imageData = getImageData();
         <div class="description">{description}</div>
         <div class="meta">
           {
-            tags &&
-            tags.length > 0 && (
+            tags && tags.length > 0 && (
               <div class="tags">
                 {tags.map((tag) => (
                   <span class="tag">{tag}</span>
@@ -203,23 +214,32 @@ const imageData = getImageData();
             <div class="published-on">
               Published <FormattedDate date={pubDate || new Date()} />
             </div>
-            {updated && (
-              <div class="last-updated-on">
-                Updated <FormattedDate date={updated} />
-              </div>
-            )}
+            {
+              updated && (
+                <div class="last-updated-on">
+                  Updated <FormattedDate date={updated} />
+                </div>
+              )
+            }
           </div>
         </div>
       </div>
       <div class="hero-image slide-in-block">
-        {imageData && (
-          <Image
-            width={1020}
-            height={510}
-            src={imageData.src as string}
-            alt={imageData.alt}
-          />
-        )}
+        {
+          imageData && (
+            <figure>
+              <Image
+                width={1020}
+                height={510}
+                src={imageData.src as string}
+                alt={imageData.alt}
+              />
+              {imageData.alt && (
+                <figcaption class="caption">{imageData.alt}</figcaption>
+              )}
+            </figure>
+          )
+        }
       </div>
     </header>
     <div class="prose">
